--- a/DD/appendix.tex
+++ b/DD/appendix.tex
@@ -3,11 +3,18 @@
 \section{Appendix}
 
 \subsection{Used tools}
+Tools used to create the DD:
+\begin{itemize}
+	\item \textbf{MikTex} \\ Distribution of the typesetting system LaTeX \\ \url{http://miktex.org/} 
+	\item \textbf{StarUML}\\ UML modelling tool we used to build the graphs\\ \url{http://staruml.io/} 
+	\item \textbf{Draw.io}\\ Desktop application for mockups and diagrams creation \\ \url{ http://draw.io/}
+	\item \textbf{GitHub desktop}\\ Desktop application of the web-based Git repository hosting service. Used to collaborate in the team and to have a track of the changes.  \\ \url{https://desktop.github.com/} 
+\end{itemize}
 
 \subsection{Hours of work}
 This is the time spent redacting the DD
 \begin{itemize}
-	\item {Lorenzo Binosi} - 0 hours
+	\item {Lorenzo Binosi} - 68 hours
 \end{itemize}
 
 \begin{thebibliography}{1}	
